plugins {
    id 'java'
}

group 'com.titarenko'
version '1.0-SNAPSHOT'

sourceCompatibility = 13.0

repositories {
    mavenCentral()
}

dependencies {
    compile "org.postgresql:postgresql:42.2.5"
    compile "com.fasterxml.jackson.core:jackson-databind:2.10.0"
    compile "org.junit.jupiter:junit-jupiter:5.6.0"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.4.0"
    compile "log4j:log4j:1.2.17"
    compile "org.hibernate:hibernate-core:5.4.12.Final"
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompile "org.mockito:mockito-junit-jupiter:3.2.4"
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}
